# rjournal

./: Cargo.toml  readme.md  rjournal.txt
src/: actions.rs  app.rs  file_editor.rs  main.rs  ui.rs  util.rs
